--- a/week1/index.html
+++ b/week1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello there </h1>
+    <h1><i>Hello there! This is good tool.</i> </h1>
 </body>
 </html>
